@@ -350,7 +350,7 @@ static bool CheckCollection (TRI_collection_t* collection) {
         collection->_lastError = datafile->_lastError;
         stop = true;
 
-        LOG_ERROR("cannot rename sealed log-file to %s, this should not happen: %s", filename, TRI_errno());
+        LOG_ERROR("cannot rename sealed log-file to %s, this should not happen: %s", filename, TRI_last_error());
 
         break;
       }
